Add GitHub templates, CI/CD, and enhanced Makefile
- Added MIT License
- Created GitHub issue templates (bug report, feature request)
- Added pull request template
- Implemented GitHub Actions CI workflow (test, lint, build multi-platform)
- Enhanced Makefile with:
  - Coverage reporting (28.6% server, 10.4% models)
  - Cross-compilation support (5 platforms)
  - Linting support
  - Install command
  - Better help documentation
- Updated .gitignore for coverage files and build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 # Binaries
 offgrid
+offgrid-*
 *.exe
 *.dll
 *.so
 *.dylib
+dist/
 
 # Test binaries
 *.test
 *.out
+
+# Coverage
+coverage.txt
+coverage.html
 
 # Go workspace files
 go.work
