--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,34 +6,25 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        BUILD_MODE: mock  # Change to 'llama' for real inference
         VERSION: 0.1.0-alpha
     image: offgrid-llm:latest
     container_name: offgrid-llm
     restart: unless-stopped
     
     ports:
-      - "11611:11611"  # HTTP API
-      - "8081:8081"  # P2P Discovery
+      - "11611:11611"  # HTTP API and Web UI
     
     volumes:
       # Model storage (persistent)
-      - ./models:/root/.offgrid/models
-      # Configuration file
-      - ./config.yaml:/root/.offgrid/config.yaml:ro
+      - offgrid-models:/var/lib/offgrid/models
       # USB import directory (optional)
       - /media/usb:/media/usb:ro
     
     environment:
       - OFFGRID_PORT=11611
       - OFFGRID_HOST=0.0.0.0
-      - OFFGRID_MODELS_DIR=/root/.offgrid/models
-      - OFFGRID_NUM_THREADS=4
-      - OFFGRID_CONTEXT_SIZE=4096
-      - OFFGRID_P2P_ENABLED=true
-      - OFFGRID_P2P_PORT=8081
     
-    # Resource limits (adjust based on models)
+    # Resource limits (adjust based on models and available RAM)
     deploy:
       resources:
         limits:
@@ -41,11 +32,11 @@ services:
           memory: 8G
         reservations:
           cpus: '2'
-          memory: 4G
+          memory: 2G
     
     # Health check
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:11611/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:11611/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -58,25 +49,10 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # Optional: nginx reverse proxy with SSL
-  nginx:
-    image: nginx:alpine
-    container_name: offgrid-nginx
-    restart: unless-stopped
-    depends_on:
-      - offgrid-llm
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    profiles:
-      - with-proxy
-
 volumes:
-  models:
+  offgrid-models:
     driver: local
+
 
 networks:
   default:
