fix: add missing model source files and fix gitignore
- Fix .gitignore to only ignore /models/ (top-level), not internal/models/
- Add registry.go with fix for model count after removal (clears map before rescan)
- Add huggingface.go with .tmp file support for incomplete downloads
- Add usb_importer.go and downloader_test.go

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ go.work.sum
 *.swo
 *~
 
-# Models (can be large)
-models/
+# Models (can be large) - only top-level models directory
+/models/
 *.gguf
 *.bin
 
